* Bump to version 5.1.0 with fixes to all CVE's. * Change default version to JDK 21