@@ -1,5 +1,9 @@
 package com.microsoft.azure.kusto.kafka.connect.sink.formatWriter;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+
+import com.microsoft.azure.kusto.kafka.connect.sink.Utils;
+import com.microsoft.azure.kusto.kafka.connect.sink.format.RecordWriter;
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileReader;
@@ -8,16 +12,10 @@ import java.io.OutputStream;
 import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.List;
-
 import org.apache.commons.io.FileUtils;
 import org.apache.kafka.connect.data.Schema;
 import org.apache.kafka.connect.sink.SinkRecord;
 import org.junit.jupiter.api.Test;
-
-import com.microsoft.azure.kusto.kafka.connect.sink.Utils;
-import com.microsoft.azure.kusto.kafka.connect.sink.format.RecordWriter;
-
-import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class StringRecordWriterProviderTest {
     @Test
@@ -25,7 +23,7 @@ public class StringRecordWriterProviderTest {
         List<SinkRecord> records = new ArrayList<>();
         for (int i = 0; i < 10; i++) {
             records.add(
-                    new SinkRecord("mytopic", 0, null, null, Schema.STRING_SCHEMA, String.format("hello-%s", i), i));
+                    new SinkRecord("mytopic", 0, null, null, Schema.STRING_SCHEMA, "hello-%s".formatted(i), i));
         }
         File file = new File("abc.txt");
         Utils.restrictPermissions(file);
@@ -40,7 +38,7 @@ public class StringRecordWriterProviderTest {
             String st;
             int i = 0;
             while ((st = br.readLine()) != null) {
-                assertEquals(st, String.format("hello-%s", i));
+                assertEquals(st, "hello-%s".formatted(i));
                 i++;
             }
         }
